<resources>
    <string name="app_name">Travel Log</string>
    <string name="starting_point">Starting point</string>
    <string name="ending_point">Ending point</string>
    <string name="date_hint">Date</string>
    <string name="distance_hint">Distance</string>
    <string name="amount_hint">Fuel amount</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export">Export .PDF</string>
    <string name="date_toast">Please fill in the date</string>
    <string name="amount_toast">Please fill in the fuel amount</string>
    <string name="km_left">According to consumption you need to assign %d more km.</string>
    <string name="okay">Okay</string>
    <string name="pdf_export_question">Do you really want to export your Travel Log to .PDF?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pdf_exported">Your .PDF was successfully created.</string>
    <string name="licence_plate">Licence plate</string>
    <string name="car_consumption">Car consumption</string>
    <string name="transfer">Transfer</string>
    <string name="write_permission_title">Granting the permission needed</string>
    <string name="write_permission_text">The app needs to write to the external storage to save your .PDF.</string>
    <string name="preference_missing">Please, check if you filled in all the information in Settings</string>
    <string name="pdf_done">.PDF exported successfully</string>
    <string name="pdf_not_done">Error occurred when exporting .PDF</string>
    <string name="log_missing">All the information have to be filled in</string>
    <string name="calendar">calendar</string>
    <string name="gas_station_icon">gas station icon</string>
    <string name="menu_button">menu button</string>
    <string name="clock">clock</string>
    <string name="km">km</string>
    <string name="transfer_sum">Enter km transfer from previous year here</string>
    <string name="consumption_sum">Enter your car consumtpion here</string>
    <string name="plate_sum">Enter your licence plate here</string>
    <string name="export_settings">Export Settings</string>
    <string name="car_settings">Car Settings</string>
    <string name="empty_database">There are no logs to export</string>
</resources>
