<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Car Settings">
        <EditTextPreference
            android:title="@string/licence_plate"
            android:key="licence_plate"
            android:inputType="textCapCharacters|number"
            android:order="0"
            android:hint="@string/licence_plate"/>

        <EditTextPreference
            android:title="@string/car_consumption"
            android:key="consumption"
            android:summary="Enter your car consumtpion here"
            android:inputType="numberDecimal"
            android:order="1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Export Settings">

        <EditTextPreference
            android:title="@string/transfer"
            android:key="transfer"
            android:inputType="number"
            android:order="2"
            android:hint="@string/transfer"/>

    </PreferenceCategory>

</PreferenceScreen>
