<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.dragonmaster.knihajazd02.activity.MainActivity"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_hint">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date"
                    android:inputType="date"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="190dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/start_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/starting_point"
                android:layout_below="@id/date_layout">
                <com.example.dragonmaster.knihajazd02.view.AutoCompleteTextInput
                    android:id="@+id/startPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/end_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ending_point"
                android:layout_below="@+id/start_layout">
                <com.example.dragonmaster.knihajazd02.view.AutoCompleteTextInput
                    android:id="@+id/endPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance_hint"
                android:layout_below="@+id/end_layout"
                android:layout_toLeftOf="@+id/save">

                <EditText
                    android:id="@+id/result"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_alignTop="@id/distance_layout"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_done_black_24dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/logs_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
